[package]
name = "aleparser"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[dependencies]
aleph-syntax-tree = { git = "ssh://git@github.com/aleph-lang/aleph-syntax-tree.git" }
rust-sitter = "0.1.2"

[build-dependencies]
rust-sitter-tool = "0.1.2"
