[package]
name = "aleparser"
version = "0.1.1"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[build-dependencies]
lalrpop = { version = "0.20", features = ["lexer"] }

[dependencies]
lalrpop-util = {version = "0.20", features = ["lexer"]}
regex = "1"
aleph-syntax-tree = { git = "ssh://git@github.com/aleph-lang/aleph-syntax-tree.git" }
