[package]
name = "aleparser"
version = "0.1.1"
edition = "2021"
license-file="LICENSE"
repository="https://github.com/aleph-lang/aleparser"
description="Aleph Parser : generate Aleph Syntax Tree."

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[build-dependencies]
lalrpop = { version = "0.20", features = ["lexer"] }

[dependencies]
lalrpop-util = {version = "0.20", features = ["lexer"]}
regex = "1"
aleph-syntax-tree = "0.1.0"

